fix spacing on shop page and menu

--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -35,10 +35,15 @@
   .submenu {
     position: fixed;
     font-size: 30px;
-    right: 200px;
+    right: 190px;
     top: 80px;
     z-index: 2;
     display: none;
+  }
+  .show_submenu {
+    position: relative;
+    display: inline-block;
+    margin-right: -13px;
   }
 
   /*SOCIAL ICONS*/
@@ -50,8 +55,8 @@
   /*LANDING PAGE*/
   .title {
     position: fixed;
-    width: 180px;
-    height: 90px;
+    width: 250px;
+    height: 100px;
     background: url('logos/TextBoxLogoBW.png') no-repeat center;
     background-size: contain;
     left: 0;
@@ -62,14 +67,14 @@
   .main_menu {
     position: absolute;
     font-size: 40px;
-    top: 100px;
+    top: 120px;
     left: 0px;
     z-index: 1;
   }
 
   .main_menu ul li a {
     color: black;
-    font-size: 40px;
+    font-size: 45px;
   }
 
   /*ALWAYS SHOW SHOP ARROWS*/
@@ -907,7 +912,7 @@
    left: 0;
    right: 0;
    bottom: 0;
-   top: 40%;
+   top: 30%;
    margin: auto;
    font-size: 130px;
  }
